# stanford_dl_ex

./: .gitignore
ex1/: linear_regression.m
tryout/: Cargo.toml
tryout/src/: lib.rs
